<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/baseline_pages_24"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_arrow_back_24"
            android:title="@string/logout" />
    </group>
</menu>
