<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F6F6"
    android:orientation="vertical"
    tools:context=".BottomDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Available To Post"
        android:layout_marginLeft="15dp"
        android:textColor="#868686"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/general_news"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/general_news"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:id="@+id/corona_update"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/corona_update"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:id="@+id/politics"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/politics"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:id="@+id/police_station"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/police_station"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:id="@+id/state_update"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/state_update"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:id="@+id/local_update"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/local_update"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_marginLeft="14dp"/>
        <TextView
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/education"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_marginLeft="14dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</LinearLayout>