<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/term_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="@string/terms_conditions"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ScrollView
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/black"
                android:text="@string/term"
                tools:text="@string/term" />


            <CheckBox

                android:id="@+id/checkbox_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/agree_terms" />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="right"
                android:textStyle="italic"
                android:textColor="#3F51B5"
                android:text="@string/privacy_policy" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/submit" />

</RelativeLayout>