<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LocationScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_location_screen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <TextView
        android:id="@+id/select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/location_screen_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manual_location"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/select_location"
        android:text="@string/choose_location"
        android:gravity="right|center_vertical"
        android:textSize="16sp"
        android:drawableRight="@drawable/baseline_arrow_forward_24"
        android:paddingEnd="50dp"
        android:drawablePadding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auto_location"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/search_location_manually"
        android:layout_below="@id/manual_location"
        android:textColor="@color/white"
        android:background="@drawable/button2"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>