<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".login_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:elevation="4dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/baseline_play_circle_filled_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/app_name"/>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_toolbar"
        android:textSize="20sp"
        android:layout_marginBottom="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/create_your_account" />

    <EditText
        android:drawablePadding="20dp"
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:drawableStart="@drawable/baseline_person_24"
        android:hint="Name" />

    <EditText
        android:drawablePadding="20dp"
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/edtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:drawableStart="@drawable/baseline_local_phone_24"
        android:hint="Phone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendotpBtn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/edtPhone"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/button"
        android:text="@string/send_otp"

        android:textColor="@color/white"/>
</RelativeLayout>